crates/swc_ecma_parser/tests/flow-hermes/corpus/invalid_syntax/migrated_0002.js
// Duplicates are forbidden if IsSimpleParameterList is false, and rest
// params, patterns, and defaults all make the params non-simple
function a(t, t, {b}) {}
